feat: add more feature

--- a/languages/clear-silver-language-configuration.json
+++ b/languages/clear-silver-language-configuration.json
@@ -5,9 +5,9 @@
     },
     // 对称高亮
     "brackets": [
-        ["<", ">"],
-        ["?cs", "?"],
-        ["(", ")"]
+        ["<?", "?>"],
+		["{", "}"],
+		["(", ")"]
     ],
     // 输入的时候自动填充
     "autoClosingPairs": [
@@ -15,17 +15,18 @@
         ["\"", "\""],
         ["'", "'"]
     ],
-    // 双击高亮范围
+    // 选中时，输入以下符号，自动将选中范围用对称符号包围起来
     "surroundingPairs": [
-        ["(", ")"],
-        ["\"", "\""],
-        ["'", "'"]
+        { "open": "'", "close": "'" },
+		{ "open": "\"", "close": "\"" },
+		{ "open": "[", "close": "]"},
+		{ "open": "(", "close": ")" }
     ],
     // 折行
     "folding": {
         "markers": {
-            "start": "^<\\?cs\\s(if|with|loop|alt):[a-zA-Z0-9.#]+\\s\\?>",
-            "end": "^<\\?cs\\s/(if|with|loop|alt)\\s\\?>"
+            "start": "<\\?cs\\s+#\\s+region\\b.*\\?>",
+            "end": "<\\?cs\\s+#\\s+endregion\\b.*\\?>"
         }
     }
 }
